- No longer saving the result of interactive tank detection when it was interrupted (by closing the interactive window or pressing the Esc key).
- In viewer.py, fixed redraw_track so it stops throwing a warning when the overlay is empty.

--- a/link_data.ipynb
+++ b/link_data.ipynb
@@ -10,7 +10,7 @@
     "from glob import glob\n",
     "\n",
     "src_dir  = '../tracking/full_20-09-25'\n",
-    "link_dir = '../links'"
+    "link_dir = '../analysis/links'"
    ]
   },
   {
@@ -96,7 +96,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
