--- a/track.ipynb
+++ b/track.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,16 +10,19 @@
     "import os\n",
     "import sys\n",
     "import platform\n",
+    "import shutil\n",
     "import re\n",
     "import datetime\n",
+    "import logging\n",
     "import multiprocessing\n",
     "from glob import glob\n",
-    "import logging\n",
+    "from fnmatch import fnmatch\n",
     "from tracker.tank import Tank\n",
     "from tracker.tracker import Tracker\n",
     "from tracker import utils\n",
     "import cv2\n",
-    "from converter import Converter\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
     "\n",
     "import tracker\n",
     "reload(tracker.utils)\n",
@@ -32,169 +35,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "../raw_videos/SF_Sat_14dpf_GroupA_n5_20200613_1205.avi\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "''' Select input files to track and an output directory for each. '''\n",
-    "\n",
-    "# tracking_dir = '../tracking/full_21-01-03'\n",
-    "tracking_dir = 'output'\n",
-    "\n",
-    "# input_files = sorted(glob('../raw_videos/*.avi')) #[:2]\n",
-    "input_files = [ '../raw_videos/SF_Sat_14dpf_GroupA_n5_20200613_1205.avi' ]\n",
-    "# input_files = [ '../raw_videos/Pa_fri_70dpf_GroupA_n5_20200807_1600.avi' ]\n",
-    "# input_files = glob('../raw_videos/Pa_[Ff]*_[Gg]roupA_n5_*') \\\n",
-    "#                + glob('../raw_videos/SF_Sat*_[Gg]roupA_n5_*')\n",
-    "\n",
-    "input_dict = {}\n",
-    "for input_file in input_files:\n",
-    "    d,fn       = os.path.split(input_file)\n",
-    "    fn,ext     = os.path.splitext(fn)\n",
-    "    output_dir = os.path.join(tracking_dir,fn)\n",
-    "    n_ind      = int(re.findall('_n(\\d+)[^\\d]*_',fn)[0])\n",
-    "    \n",
-    "    # If a repaired version exists, use that instead.\n",
-    "    repaired_file = os.path.join(d,'repaired',fn+'-repaired'+ext)\n",
-    "    input_file = repaired_file if os.path.exists(repaired_file) else input_file\n",
-    "    \n",
-    "#     # If a trial file already exists, skip.\n",
-    "#     if os.path.exists(os.path.join(output_dir,'trial.pik')):\n",
-    "#         continue\n",
-    "        \n",
-    "    input_dict[input_file] = dict( output_dir=output_dir, n_ind=n_ind )\n",
-    "\n",
-    "print(len(input_dict))\n",
-    "\n",
-    "for f,D in input_dict.items():\n",
-    "    print(f)\n",
-    "#     print('   ',D)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 62,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      "                                                                                                                                                                                                        \r",
-      "     Video capture released"
-     ]
-    }
-   ],
-   "source": [
-    "import tracker\n",
-    "reload(tracker.utils)\n",
-    "from tracker import utils\n",
-    "reload(tracker.tank)\n",
-    "from tracker.tank import Tank\n",
-    "reload(tracker.tracker)\n",
-    "from tracker.tracker import Tracker\n",
-    "\n",
-    "\n",
-    "''' Create output directories. Compute backgrounds. '''\n",
-    "\n",
-    "settings = dict(\n",
-    "    threshold_offset = 13,    # threshold offset for contour-finding\n",
-    "    # Background subtraction (for naive background subtraction only).\n",
+    "default_settings = dict(\n",
+    "    # Background subtraction.\n",
     "    bkgSub_options   = dict( n_training_frames = 200, # number of frames used to compute background\n",
     "                             t_start = 0, t_end = -1, # time range used to compute background\n",
-    "                             contrast_factor = 4,     # post-subtraction contrast enhancement factor\n",
+    "                             contrast_factor = 5,     # post-subtraction contrast enhancement factor\n",
     "                             secondary_subtraction = True, \n",
-    "                             secondary_factor = 2 # frame = frame-secondary_factor*secondary_background\n",
-    "                           )\n",
-    "    )\n",
-    "\n",
-    "for input_file,D in input_dict.items():\n",
-    "    tracker = Tracker(input_video=input_file, **D)\n",
-    "    \n",
-    "    # Create output directory.\n",
-    "    tracker.init_directory()\n",
-    "    \n",
-    "    # Create a link to the input video in the output directory.\n",
-    "    output_dir = D['output_dir']\n",
-    "    input_shortcut = os.path.join(output_dir,'raw'+ext)\n",
-    "#     if not 'windows' in platform.system().lower() and not os.path.exists(input_shortcut):\n",
-    "    try:\n",
-    "        os.symlink(os.path.relpath(input_file,output_dir),input_shortcut)\n",
-    "    except:\n",
-    "        pass\n",
-    "        \n",
-    "    # Detect background.\n",
-    "    tracker.init_video_input()\n",
-    "    tracker.bkgSub_options   = settings['bkgSub_options']\n",
-    "    tracker.offset           = settings['threshold_offset']\n",
-    "    tracker.init_background()\n",
-    "    tracker.init_secondary_background()\n",
-    "    tracker.release()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 63,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "     Tank loaded from output/SF_Sat_14dpf_GroupA_n5_20200613_1205/tank.pik                                                                                                                              "
-     ]
-    }
-   ],
-   "source": [
-    "''' Trace tanks. '''\n",
-    "\n",
-    "for input_file,D in input_dict.items():\n",
-    "    tracker = Tracker(input_video=input_file, **D)\n",
-    "    tracker.init_background()\n",
-    "    tracker.release()\n",
-    "    tracker.init_tank(thresh=6,dilate=15)\n",
-    "\n",
-    "# cv2.destroyAllWindows()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 64,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "../raw_videos/SF_Sat_14dpf_GroupA_n5_20200613_1205.avi\n",
-      "     Done                                                                                                                                                                                               "
-     ]
-    }
-   ],
-   "source": [
-    "import tracker\n",
-    "reload(tracker.utils)\n",
-    "from tracker import utils\n",
-    "reload(tracker.tank)\n",
-    "from tracker.tank import Tank\n",
-    "reload(tracker.tracker)\n",
-    "from tracker.tracker import Tracker\n",
-    "\n",
-    "settings.update(dict(\n",
+    "                             secondary_factor = 1 # frame = frame-secondary_factor*secondary_background\n",
+    "                           ),\n",
     "    t_start          = 0,     # Time at which to start tracking, in seconds.\n",
-    "    t_end            = 30,    # Time at which to end tracking, in seconds.\n",
+    "    t_end            = -1,    # Time at which to end tracking, in seconds.\n",
     "    \n",
     "    # Contour detection.\n",
     "    n_pixel_blur     =  7,    # square-root of n-pixels for threshold blurring\n",
@@ -215,6 +69,8 @@
     "                              # on thresholded image before extracting contours.\n",
     "    reversal_threshold = 0.5, # average frame-to-frame displacement against the director \n",
     "                              # over the last few frames to trigger a reversal. \n",
+    "    \n",
+    "    # Visualization.\n",
     "    live_preview     = False, # Toggle live preview of tracking.\n",
     "    save_video       = False, \n",
     "    # What information to draw on the tracking output video.\n",
@@ -222,17 +78,170 @@
     "                                 extra_points=True, timestamp=True, \n",
     "                                 contours=True, contour_color=(100,255,0), \n",
     "                                 contour_thickness=1 )\n",
-    "    ))\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "172\n"
+     ]
+    }
+   ],
+   "source": [
+    "''' Select input files to track and an output directory for each. '''\n",
+    "\n",
+    "tracking_dir = '../tracking/full_21-01-05'\n",
+    "# tracking_dir = 'output'\n",
+    "\n",
+    "input_dir   = '../raw_videos'\n",
+    "# input_dir   = '/media/yaouen/trilab_data/larval_schooling/raw_videos'\n",
+    "input_files = sorted(glob(os.path.join(input_dir,'*_7dpf_*.avi'))) \\\n",
+    "               + sorted(glob(os.path.join(input_dir,'*_14dpf_*.avi'))) \\\n",
+    "               + sorted(glob(os.path.join(input_dir,'*_21dpf_*.avi')))\n",
+    "# input_files = sorted(glob('../raw_videos/*.avi')) #[:2]\n",
+    "# input_files = [ '../raw_videos/SF_Sat_14dpf_GroupA_n5_20200613_1205.avi' ]\n",
+    "\n",
+    "input_dict = {}\n",
+    "for input_file in input_files:\n",
+    "    d,fn       = os.path.split(input_file)\n",
+    "    fn,ext     = os.path.splitext(fn)\n",
+    "    output_dir = os.path.join(tracking_dir,fn)\n",
+    "    n_ind      = int(re.findall('_n(\\d+)[^\\d]*_',fn)[0])\n",
+    "    \n",
+    "    # If a repaired version exists, use that instead.\n",
+    "    repaired_file = os.path.join(d,'repaired',fn+'-repaired'+ext)\n",
+    "    input_file = repaired_file if os.path.exists(repaired_file) else input_file\n",
+    "    \n",
+    "    # If a trial file already exists, skip.\n",
+    "    if os.path.exists(os.path.join(output_dir,'trial.pik')):\n",
+    "        continue\n",
+    "    \n",
+    "    input_dict[input_file] = {}\n",
+    "    input_dict[input_file].update(default_settings)\n",
+    "    input_dict[input_file].update(dict( output_dir=output_dir, \n",
+    "                                        n_ind=n_ind, trial_name=fn ))\n",
+    "\n",
+    "# Function to edit a pre-existing nested dictionary entry from\n",
+    "# a dot-separated key list (used to apply settings variants).\n",
+    "def set_nested_dict(d, key_list, val):\n",
+    "    if len(key_list)==1:\n",
+    "        d[key_list[0]] = val\n",
+    "    else:\n",
+    "        set_nested_dict(d[key_list[0]],key_list[1:],val)\n",
+    "        \n",
+    "# Load settings variants.\n",
+    "df = pd.read_excel('settings.xlsx')\n",
+    "for i,row in df.iterrows():\n",
+    "    trial,par,val = row[:3]\n",
+    "    for f,d in input_dict.items():\n",
+    "        if fnmatch(d['trial_name'],trial):\n",
+    "            set_nested_dict(input_dict[f], par.split('.'), val)\n",
+    "\n",
+    "print(len(input_dict))\n",
+    "\n",
+    "# for f,D in input_dict.items():\n",
+    "#     print('   ',D['trial_name'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "''' Create output directories. Compute backgrounds. '''\n",
+    "\n",
+    "# If not None, look for pre-existing backgrounds in bkg_dir.\n",
+    "bkg_dir = None # os.path.join(tracking_dir,'../tank-only_20-09-25') # \n",
+    "\n",
+    "for input_file,D in input_dict.items():\n",
+    "    tracker = Tracker(input_video=input_file, **D)\n",
+    "    # Create output directory.\n",
+    "    tracker.init_directory()\n",
+    "    tracker.save_settings()\n",
+    "    # Create a link to the input video in the output directory.\n",
+    "    input_shortcut = os.path.join(D['output_dir'],'raw'+ext)\n",
+    "#     if not 'windows' in platform.system().lower() and not os.path.exists(input_shortcut):\n",
+    "    try:\n",
+    "        os.symlink(os.path.relpath(input_file,D['output_dir']),input_shortcut)\n",
+    "    except:\n",
+    "        pass\n",
+    "    \n",
+    "    # Find or detect background.\n",
+    "#     try:\n",
+    "#         d = os.path.join(bkg_dir,D['trial_name'])\n",
+    "#         for i in ['','2']:\n",
+    "#             for e in ['npz','png']:\n",
+    "#                 f1 = os.path.join(d,f'background{i}.{e}')\n",
+    "#                 f2 = os.path.join(D['output_dir'],f'background{i}.{e}')\n",
+    "#                 shutil.copy2(f1,f2)\n",
+    "#     except:\n",
+    "#         %tb\n",
+    "    tracker.init_video_input()\n",
+    "    tracker.init_background()\n",
+    "    tracker.init_secondary_background()\n",
+    "    tracker.release()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "''' Trace tanks. '''\n",
+    "\n",
+    "# If not None, look for pre-existing tanks in tank_dir.\n",
+    "tank_dir = os.path.join(tracking_dir,'../tank-only_20-09-25') # None # \n",
+    "\n",
+    "for input_file,D in input_dict.items():\n",
+    "#     print(D['trial_name'])\n",
+    "    try:\n",
+    "        d = os.path.join(tank_dir,D['trial_name'])\n",
+    "        for e in ['pik','png']:\n",
+    "            f2 = os.path.join(D['output_dir'],f'tank.{e}')\n",
+    "            if not os.path.exists(f2):\n",
+    "                f1 = os.path.join(d,f'tank.{e}')\n",
+    "                shutil.copy2(f1,f2)\n",
+    "    except:\n",
+    "#         print(D['trial_name'])\n",
+    "        tracker = Tracker(input_video=input_file, **D)\n",
+    "        tracker.init_background()\n",
+    "        tracker.release()\n",
+    "        tracker.init_tank(thresh=6,dilate=15)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "import tracker\n",
+    "reload(tracker.utils)\n",
+    "from tracker import utils\n",
+    "reload(tracker.tank)\n",
+    "from tracker.tank import Tank\n",
+    "reload(tracker.tracker)\n",
+    "from tracker.tracker import Tracker\n",
     "\n",
     "def track(input_file):\n",
-    "    \n",
+    "    settings = input_dict[input_file]\n",
     "    globals().update(settings)\n",
-    "    globals().update(input_dict[input_file])\n",
-    "    video_output_options = settings['video_output_options']\n",
-    "    \n",
     "    utils.add_log_file(os.path.join(output_dir,'log.txt'))\n",
     "    logging.info(utils.parindent+'Initializing')\n",
-    "    tracker = Tracker( input_video=input_file, **input_dict[input_file], **settings )\n",
+    "    tracker = Tracker(input_video=input_file, **settings)\n",
     "    tracker.init_all()\n",
     "    tracker.save_settings()\n",
     "    try:\n",
@@ -242,29 +251,27 @@
     "            if i_frame%n_report==0:\n",
     "                tracker.save_trial()\n",
     "                percent = (i_frame-tracker.frame_start)/(tracker.frame_end-tracker.frame_start)\n",
+    "                t = str(datetime.datetime.now()).split('.')\n",
     "                logging.info(utils.parindent + f'Tracking: {tracker.get_current_timestamp()}, ' +\n",
-    "                             f'{tracker.get_percent_complete():4.1f}% complete')\n",
+    "                             f'{tracker.get_percent_complete():4.1f}% complete, {t[0]}.{t[1][:2]}' )\n",
     "            tracker.track_next_frame(save_frames=False)\n",
     "        tracker.release()\n",
     "        logging.info(utils.parindent+'Saving')\n",
     "        tracker.save_trial()\n",
     "        logging.info(utils.parindent+'Done')\n",
-    "\n",
     "    except:\n",
     "        tracker.release()\n",
     "        logging.info('Failed')\n",
     "        for info in sys.exc_info():\n",
     "            logging.warning(info)\n",
     "        %tb\n",
-    "\n",
     "    return\n",
     "\n",
     "\n",
     "# Multi-threading doesn't work in Windows. If the OS is Windows, set n_thread to 1.\n",
-    "n_threads = 1 if 'windows' in platform.system().lower() else 1\n",
+    "n_threads = 1 if 'windows' in platform.system().lower() else 6\n",
     "\n",
     "if n_threads==1:\n",
-    "    \n",
     "    for input_file in input_dict.keys():\n",
     "        utils.reset_logging()\n",
     "        utils.add_log_stream(sys.stdout)\n",
@@ -274,7 +281,6 @@
     "        handler.setFormatter(logging.Formatter('\\r'+' '*200+'\\r     %(message)s'))\n",
     "        track(input_file)\n",
     "        break\n",
-    "    \n",
     "else:\n",
     "    def track_(k):\n",
     "        utils.reset_logging()\n",
@@ -292,57 +298,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "output/SF_Sat_14dpf_GroupA_n5_20200613_1205/trial.pik\n",
-      "0\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "array([[691.        ,   8.38516909],\n",
-       "       [692.        ,   8.34035332],\n",
-       "       [693.        ,   8.2420516 ],\n",
-       "       [694.        ,   8.2420516 ],\n",
-       "       [695.        ,   8.66789289],\n",
-       "       [696.        ,   8.26678991],\n",
-       "       [697.        ,   8.24903365],\n",
-       "       [698.        ,   8.55723259],\n",
-       "       [699.        ,   8.48607623],\n",
-       "       [700.        ,   8.27986523],\n",
-       "       [701.        ,   8.06190112],\n",
-       "       [702.        ,   8.17279399],\n",
-       "       [703.        ,   8.32850634],\n",
-       "       [704.        ,   8.27986523],\n",
-       "       [705.        ,   8.31106825],\n",
-       "       [706.        ,   8.31816901],\n",
-       "       [707.        ,   8.34709195],\n",
-       "       [708.        ,   8.48534614],\n",
-       "       [709.        ,   8.25384134],\n",
-       "       [710.        ,   7.72467901],\n",
-       "       [711.        ,   4.64827176],\n",
-       "       [712.        ,   6.79978262],\n",
-       "       [713.        ,   6.32343359],\n",
-       "       [714.        ,   4.30898815],\n",
-       "       [715.        ,   7.28747581],\n",
-       "       [716.        ,   7.63751209],\n",
-       "       [717.        ,   7.71986938],\n",
-       "       [718.        ,   7.78305376],\n",
-       "       [719.        ,   7.78111894],\n",
-       "       [720.        ,   7.4156169 ]])"
-      ]
-     },
-     "execution_count": 51,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "\n",
@@ -362,7 +320,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print(input_files)"
+   ]
   },
   {
    "cell_type": "code",
@@ -370,7 +330,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "list(input_dict.keys())"
+    "type(list(input_dict.keys()))"
    ]
   },
   {
@@ -438,6 +398,13 @@
     "    plt.show()\n",
     "    break"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
