--- a/report_progress.ipynb
+++ b/report_progress.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,59 +46,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "13"
+       "548"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "trial_dirs = sorted(glob('../tracking/test_21-01-03/*'))\n",
+    "trial_dirs = sorted(glob('../tracking/full_21-01-05/*'))\n",
     "len(trial_dirs)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# from tracker import utils\n",
+    "\n",
+    "# for d in trial_dirs:\n",
+    "# #     print(d)\n",
+    "#     settings = utils.load_txt(os.path.join(d,'settings.txt'))\n",
+    "#     print(f\"{settings['frame_end']}/{settings['frame_end']}\")\n",
+    "# #     break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "complete             Pa_Fri_14dpf_groupA_n5_20200612_1300_10FPS\n",
-      "complete             Pa_Fri_21dpf_GroupA_n5_20200619_1345\n",
-      "complete             Pa_Fri_28dpf_groupA_n5_20200626_1800\n",
-      "complete             Pa_Fri_7dpf_GroupA_n5_20200605_1100\n",
-      "complete             Pa_Fri_84dpf_GroupA_n5_20200821_1304\n",
-      "complete             Pa_fri_70dpf_GroupA_n5_20200807_1600\n",
-      "complete             SF_Sat_14dpf_GroupA_n5_20200613_1205\n",
-      "complete             SF_Sat_21dpf_GroupA_n5_20200620_1530\n",
-      "complete             SF_Sat_28dpf_GroupA_n5_20200627_1340\n",
-      "complete             SF_Sat_70dpf_GroupA_n5_20200808_1015\n",
-      "complete             SF_Sat_7dpf_GroupA_n5_20200606_1200\n",
-      "not found            notes.txt\n",
-      "not found            notes.txt~\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for trial_dir in trial_dirs:\n",
     "    try:\n",
     "        globals().update(get_info(trial_dir))\n",
     "#         if status == 'complete':\n",
-    "#         if 'tracking' not in status:\n",
-    "#             continue\n",
+    "        if 'tracking' not in status:\n",
+    "            continue\n",
     "        print(f'{status:20s} {name}')\n",
     "    except:\n",
     "        print(f'No info for {trial_dir}')"
@@ -106,13 +101,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'no log': 0, 'tracking': 4, 'complete': 0, 'failed': 7}"
+       "{'no log': 276, 'tracking': 0, 'complete': 272, 'failed': 0}"
       ]
      },
      "metadata": {},
