- tracker.py: Tweaked the way the secondary background is handled. Initially the secondary background stored the average background-subtracted frame. Each time a new frame was read, the primary background was subtracted, then the secondary background was multiplied by secondary_factor and subtracted. For a brief time I decided the secondary background file should store secondary_factor*background2 instead. This avoids multiplying by secondary_factor every time, but it also locks in the secondary_factor. In this new version, the secondary background file stores the average background-subtracted frame, and the multiplication by secondary_background is done right after loading or computing background2. That way the multiplication is only done once while also not having to recompute background2 every time secondary_factor changes.

--- a/track.ipynb
+++ b/track.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,20 +35,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "default_settings = dict(\n",
     "    # Background subtraction.\n",
-    "    bkgSub_options   = dict( n_training_frames = 200, # number of frames used to compute background\n",
-    "                             t_start = 0, t_end = -1, # time range used to compute background\n",
-    "                             contrast_factor = 5,     # post-subtraction contrast enhancement factor\n",
+    "    bkgSub_options   = dict( n_training_frames = 200,   # number of frames used to compute background\n",
+    "                             t_start = 0, t_end = 1200, # time range used to compute background\n",
+    "                             contrast_factor = 5,       # post-subtraction contrast enhancement factor\n",
     "                             secondary_subtraction = True, \n",
-    "                             secondary_factor = 1 # frame = frame-secondary_factor*secondary_background\n",
+    "                             secondary_factor = 1       # frame = frame-secondary_factor*secondary_background\n",
     "                           ),\n",
     "    t_start          = 0,     # Time at which to start tracking, in seconds.\n",
-    "    t_end            = 10,    # Time at which to end tracking, in seconds.\n",
+    "    t_end            = 1200,  # Time at which to end tracking, in seconds.\n",
     "    \n",
     "    # Contour detection.\n",
     "    n_pixel_blur     =  7,    # square-root of n-pixels for threshold blurring\n",
@@ -71,7 +71,7 @@
     "                              # over the last few frames to trigger a reversal. \n",
     "    \n",
     "    # Visualization.\n",
-    "    save_video       = True, \n",
+    "    save_video       = False, \n",
     "    # What information to draw on the tracking output video.\n",
     "    video_output_options = dict( tank=True, points=False, directors=True, \n",
     "                                 extra_points=True, timestamp=True, \n",
@@ -82,30 +82,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n"
+      "683\n"
      ]
     }
    ],
    "source": [
     "''' Select input files to track and an output directory for each. '''\n",
     "\n",
-    "# tracking_dir = '../tracking/full_21-01-05'\n",
-    "tracking_dir = 'output'\n",
+    "tracking_dir = '../tracking/full_21-01-17'\n",
+    "# tracking_dir = 'output'\n",
     "\n",
     "input_dir   = '../raw_videos'\n",
     "# input_dir   = '/media/yaouen/trilab_data/larval_schooling/raw_videos'\n",
     "# input_files = sorted(glob(os.path.join(input_dir,'*_7dpf_*.avi'))) \\\n",
     "#                + sorted(glob(os.path.join(input_dir,'*_14dpf_*.avi'))) \\\n",
     "#                + sorted(glob(os.path.join(input_dir,'*_21dpf_*.avi')))\n",
-    "# input_files = sorted(glob('../raw_videos/*.avi')) #[:2]\n",
-    "input_files = [ '../raw_videos/SF_Sat_14dpf_GroupB_n5_2020-06-13-095516-0000.avi' ]\n",
+    "input_files = sorted(glob('../raw_videos/*.avi')) #[:2]\n",
+    "# input_files = [ '../raw_videos/SF_Sat_14dpf_GroupB_n5_2020-06-13-095516-0000.avi' ]\n",
     "\n",
     "input_dict = {}\n",
     "for input_file in input_files:\n",
@@ -151,21 +151,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      "                                                                                                                                                                                                        \r",
-      "     Video capture released"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "''' Create output directories. Compute backgrounds. '''\n",
     "\n",
