- Moved viewer from ./tracker/viewer.py to ./viewer.py.
- Added tank masking and contour drawing to the viewer.

--- a/track.ipynb
+++ b/track.ipynb
@@ -51,7 +51,7 @@
     "    t_end            = 1200,  # Time at which to end tracking, in seconds.\n",
     "    \n",
     "    # Contour detection.\n",
-    "    n_pixel_blur     =  7,    # square-root of n-pixels for threshold blurring\n",
+    "    n_blur           =  7,    # square-root of n-pixels for threshold blurring\n",
     "    block_size       = 15,    # contour block size\n",
     "    threshold_offset = 13,    # threshold offset for contour-finding\n",
     "    min_area         = 25,    # minimum area for detection\n",
@@ -193,17 +193,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "     Tank loaded from output/SF_Sat_14dpf_GroupB_n5_2020-06-13-095516-0000/tank.pik                                                                                                                     "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "''' Trace tanks. '''\n",
     "\n",
@@ -230,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 7,
    "metadata": {
     "scrolled": false
    },
