- During interactive tank detection, the title of the window now shows the path to the video file.
- Now using hasattr(a,'b') instead of ('b' in a.__dict__.keys()) to check whether object a has a member called b.

--- a/report_progress.ipynb
+++ b/report_progress.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,28 +46,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "548"
+       "683"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "trial_dirs = sorted(glob('../tracking/full_21-01-05/*'))\n",
+    "trial_dirs = sorted(glob('../tracking/full_21-01-17/*'))\n",
     "len(trial_dirs)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,17 +82,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 17,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "failed               Pa_Fri_7dpf_GroupA_n2_20200605_1100\n",
+      "failed               Pa_Fri_7dpf_GroupD_n2_20200605_1400\n",
+      "failed               SF_Fri_7dpf_GroupC_n2b_20200626_1445\n",
+      "tracking (41.9%)     SF_Sat_7dpf_GroupB_n5_20200606_1250\n",
+      "tracking (36.0%)     SF_Sat_7dpf_GroupD_n2b_20200606_1435_CORRUPT\n",
+      "tracking (30.0%)     SF_Sun_7dpf_GroupA_n2b_20200802_1530\n",
+      "tracking (30.0%)     SF_Sun_7dpf_GroupA_n5_20200802_1530\n",
+      "tracking (24.0%)     SF_Sun_7dpf_GroupC_n2a_20200802_1640\n",
+      "tracking (26.0%)     SF_Sun_7dpf_GroupC_n2b_20200802_1640\n",
+      "tracking (24.0%)     SF_Sun_7dpf_GroupD_n2a_20200802_1720\n",
+      "tracking (28.0%)     SF_Sun_7dpf_GroupD_n5_20200802_1720\n",
+      "tracking (67.9%)     SF_fri_7dpf_groupB_n1_20200626_1515\n"
+     ]
+    }
+   ],
    "source": [
     "for trial_dir in trial_dirs:\n",
     "    try:\n",
     "        globals().update(get_info(trial_dir))\n",
-    "#         if status == 'complete':\n",
-    "        if 'tracking' not in status:\n",
+    "        if status in ['complete','no log']:\n",
+    "#         if 'tracking' not in status:\n",
     "            continue\n",
     "        print(f'{status:20s} {name}')\n",
     "    except:\n",
@@ -101,13 +120,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'no log': 276, 'tracking': 0, 'complete': 272, 'failed': 0}"
+       "{'no log': 574, 'tracking': 0, 'complete': 105, 'failed': 4}"
       ]
      },
      "metadata": {},
