--- a/report_progress.ipynb
+++ b/report_progress.ipynb
@@ -52,7 +52,7 @@
     {
      "data": {
       "text/plain": [
-       "683"
+       "163"
       ]
      },
      "execution_count": 2,
@@ -61,7 +61,7 @@
     }
    ],
    "source": [
-    "trial_dirs = sorted(glob('../tracking/full_21-01-17/*'))\n",
+    "trial_dirs = sorted(glob('../tracking/full_21-01-19/*'))\n",
     "len(trial_dirs)"
    ]
   },
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {
     "scrolled": false
    },
@@ -91,18 +91,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "failed               Pa_Fri_7dpf_GroupA_n2_20200605_1100\n",
-      "failed               Pa_Fri_7dpf_GroupD_n2_20200605_1400\n",
-      "failed               SF_Fri_7dpf_GroupC_n2b_20200626_1445\n",
-      "tracking (41.9%)     SF_Sat_7dpf_GroupB_n5_20200606_1250\n",
-      "tracking (36.0%)     SF_Sat_7dpf_GroupD_n2b_20200606_1435_CORRUPT\n",
-      "tracking (30.0%)     SF_Sun_7dpf_GroupA_n2b_20200802_1530\n",
-      "tracking (30.0%)     SF_Sun_7dpf_GroupA_n5_20200802_1530\n",
-      "tracking (24.0%)     SF_Sun_7dpf_GroupC_n2a_20200802_1640\n",
-      "tracking (26.0%)     SF_Sun_7dpf_GroupC_n2b_20200802_1640\n",
-      "tracking (24.0%)     SF_Sun_7dpf_GroupD_n2a_20200802_1720\n",
-      "tracking (28.0%)     SF_Sun_7dpf_GroupD_n5_20200802_1720\n",
-      "tracking (67.9%)     SF_fri_7dpf_groupB_n1_20200626_1515\n"
+      "not found            SF_Fri_28dpf_GroupC_n1a_20200717_1700\n"
      ]
     }
    ],
@@ -120,13 +109,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'no log': 574, 'tracking': 0, 'complete': 105, 'failed': 4}"
+       "{'no log': 0, 'tracking': 0, 'complete': 162, 'failed': 0}"
       ]
      },
      "metadata": {},
