- Made tracker.track_next_frame() return True rather than None when a frame has been read successfully. The last commit made it return False when a frame is not read successfully, and made the tracking loop in track.ipynb stop when that happens. However None was interpreted as False, which meant the tracking loop would never proceed.

--- a/track.ipynb
+++ b/track.ipynb
@@ -88,22 +88,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n",
-      "    SF_Fri_28dpf_GroupC_n1a_20200717_1700\n"
+      "     ../raw_videos/SF_fri_7dpf_groupD_n2b_20200626_1600.avi                                                                                                                                             163\n"
      ]
     }
    ],
    "source": [
     "''' Select input files to track and an output directory for each. '''\n",
     "\n",
-    "tracking_dir = '../tracking/full_21-01-19'\n",
+    "tracking_dir = '../tracking/full_21-01-22'\n",
     "# tracking_dir = 'output'\n",
     "\n",
     "input_files = sorted(glob('../raw_videos/*.avi'))\n",
@@ -111,6 +110,7 @@
     "\n",
     "input_dict = {}\n",
     "for input_file in input_files:\n",
+    "    logging.info(input_file)\n",
     "    d,fn       = os.path.split(input_file)\n",
     "    fn,ext     = os.path.splitext(fn)\n",
     "    output_dir = os.path.join(tracking_dir,fn)\n",
@@ -149,13 +149,13 @@
     "\n",
     "# input_dict = dict(list(input_dict.items())[7:13])\n",
     "\n",
-    "for f,D in input_dict.items():\n",
-    "    print('   ',D['trial_name'])"
+    "# for f,D in input_dict.items():\n",
+    "#     print('   ',D['trial_name'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 4,
    "metadata": {
     "scrolled": false
    },
@@ -164,9 +164,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\r",
-      "                                                                                                                                                                                                        \r",
-      "     ../raw_videos/SF_Fri_28dpf_GroupC_n1a_20200717_1700.avi"
+      "     ../raw_videos/SF_fri_7dpf_groupD_n2b_20200626_1600.avi                                                                                                                                             "
      ]
     }
    ],
@@ -175,8 +173,8 @@
     "\n",
     "# If not None, look for pre-existing backgrounds in bkg_dir.\n",
     "# bkg_dir = None\n",
-    "# bkg_dir = os.path.join(tracking_dir,'../full_21-01-17') # \n",
-    "bkg_dir = '/home/yaouen/Desktop/larval_schooling on trilab_data/tracking/full_21-01-17'\n",
+    "bkg_dir = os.path.join(tracking_dir,'../full_21-01-17') # \n",
+    "# bkg_dir = '/home/yaouen/Desktop/larval_schooling on trilab_data/tracking/full_21-01-17'\n",
     "\n",
     "\n",
     "for input_file,D in input_dict.items():\n",
@@ -193,7 +191,7 @@
     "    except:\n",
     "        pass\n",
     "    \n",
-    "    # If background file exists, use it.\n",
+    "    # If background file(s) already exist, don't do anything.\n",
     "    b  = D['bkgSub_options']['secondary_subtraction']\n",
     "    f1 = os.path.join(tracker.output_dir,'background.npz')\n",
     "    f2 = os.path.join(tracker.output_dir,'background2.npz')\n",
@@ -210,25 +208,23 @@
     "#         continue\n",
     "    except:\n",
     "        %tb\n",
-    "    # Otherwise, compute background.\n",
-    "    tracker.init_video_input()\n",
-    "    tracker.init_background()\n",
-    "    tracker.init_secondary_background()\n",
-    "    tracker.release()"
+    "#     # Otherwise, compute background.\n",
+    "#     tracker.init_video_input()\n",
+    "#     tracker.init_background()\n",
+    "#     tracker.init_secondary_background()\n",
+    "#     tracker.release()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\r",
-      "                                                                                                                                                                                                        \r",
-      "     ../raw_videos/SF_Fri_28dpf_GroupC_n1a_20200717_1700.avi"
+      "     ../raw_videos/SF_fri_7dpf_groupD_n2b_20200626_1600.avi                                                                                                                                             "
      ]
     }
    ],
@@ -237,55 +233,52 @@
     "\n",
     "# If not None, look for pre-existing tanks in tank_dir.\n",
     "# tank_dir = None # os.path.join(tracking_dir,'../tank-only_20-09-25') # \n",
-    "tank_dir = '/home/yaouen/Desktop/larval_schooling on trilab_data/tracking/full_21-01-17'\n",
+    "tank_dir = '../full_21-01-17'\n",
     "\n",
-    "for input_file,D in input_dict.items():\n",
+    "for input_file,D in list(input_dict.items())[:]:\n",
     "    logging.info(input_file)\n",
-    "    try:\n",
-    "        d = os.path.join(tank_dir,D['trial_name'])\n",
-    "        for e in ['pik','png']:\n",
-    "            f2 = os.path.join(D['output_dir'],f'tank.{e}')\n",
-    "            if not os.path.exists(f2):\n",
-    "                f1 = os.path.join(d,f'tank.{e}')\n",
-    "                shutil.copy2(f1,f2)\n",
-    "    except:\n",
-    "        tracker = Tracker(input_video=input_file, **D)\n",
-    "        tracker.init_video_input()\n",
-    "        tracker.init_background()\n",
-    "        tracker.release()\n",
-    "        tracker.init_tank(thresh=5,dilate=18)"
+    "    \n",
+    "    f = os.path.join(D['output_dir'],f'tank.pik')\n",
+    "    if os.path.exists(f):\n",
+    "        continue\n",
+    "    \n",
+    "#     try:\n",
+    "#         d = os.path.join(tank_dir,D['trial_name'])\n",
+    "#         for e in ['pik','png']:\n",
+    "#             f2 = os.path.join(D['output_dir'],f'tank.{e}')\n",
+    "#             if not os.path.exists(f2):\n",
+    "#                 f1 = os.path.join(d,f'tank.{e}')\n",
+    "#                 shutil.copy2(f1,f2)\n",
+    "#     except:\n",
+    "#         pass\n",
+    "    \n",
+    "    tracker = Tracker(input_video=input_file, **D)\n",
+    "    tracker.init_video_input()\n",
+    "    tracker.init_background()\n",
+    "    tracker.release()\n",
+    "    tracker.init_tank(thresh=4,dilate=20)\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "../raw_videos/SF_Fri_28dpf_GroupC_n1a_20200717_1700.avi\n",
-      "     <traceback object at 0x7f5c34f43688>                                                                                                                                                               "
-     ]
-    },
-    {
-     "ename": "Exception",
-     "evalue": "Could not read frame 0.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mException\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;31mException\u001b[0m: Could not read frame 0."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import tracker\n",
     "reload(tracker.utils)\n",
-    "reload(tracker.frame)\n",
     "from tracker import utils\n",
     "reload(tracker.tank)\n",
     "from tracker.tank import Tank\n",
@@ -329,7 +322,7 @@
     "\n",
     "\n",
     "# Multi-threading doesn't work in Windows. If the OS is Windows, set n_thread to 1.\n",
-    "n_threads = 1 if 'windows' in platform.system().lower() else 1\n",
+    "n_threads = 1 if 'windows' in platform.system().lower() else 5\n",
     "\n",
     "if n_threads==1:\n",
     "    for input_file in input_dict.keys():\n",
