--- a/report_progress.ipynb
+++ b/report_progress.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,28 +46,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "163"
+       "682"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "trial_dirs = sorted(glob('../tracking/full_21-01-19/*'))\n",
+    "trial_dirs = sorted(glob('../tracking/full_21-01-22/*'))\n",
     "len(trial_dirs)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {
     "scrolled": false
    },
@@ -91,7 +91,50 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "not found            SF_Fri_28dpf_GroupC_n1a_20200717_1700\n"
+      "complete             Pa_Fri_14dpf_GroupA_n2_20200612_1400\n",
+      "complete             Pa_Fri_14dpf_GroupA_n2b_20200612_1300_10FPS\n",
+      "complete             Pa_Fri_14dpf_GroupA_n2b_20200612_1400\n",
+      "complete             Pa_Fri_14dpf_GroupB_n2_20200612_1430\n",
+      "complete             Pa_Fri_14dpf_GroupB_n2b_20200612_1430\n",
+      "complete             Pa_Fri_14dpf_GroupC_n2_20200612_1515\n",
+      "complete             Pa_Fri_14dpf_GroupC_n2b_20200612_1515\n",
+      "complete             Pa_Fri_14dpf_GroupD_n2_20200612_1600\n",
+      "tracking (72.0%)     Pa_Fri_14dpf_GroupD_n2b_20200612_1600\n",
+      "complete             Pa_Fri_14dpf_groupA_n5_20200612_1300_10FPS\n",
+      "complete             Pa_Fri_14dpf_groupB_n5_20200612_1430\n",
+      "complete             Pa_Fri_14dpf_groupC_n5_20200612_1515\n",
+      "complete             Pa_Fri_14dpf_groupD_n5_20200612_1600\n",
+      "complete             Pa_Fri_21dpf_GroupA_n1_20200619_1530\n",
+      "complete             Pa_Fri_21dpf_GroupA_n2_20200619_1345\n",
+      "complete             Pa_Fri_21dpf_GroupA_n2b_20200619_1345\n",
+      "complete             Pa_Fri_21dpf_GroupA_n5_20200619_1345\n",
+      "tracking (62.0%)     Pa_Fri_21dpf_GroupB_n2_20200619_1245\n",
+      "complete             Pa_Fri_21dpf_GroupB_n2b_20200619_1245\n",
+      "complete             Pa_Fri_21dpf_GroupB_n5_20200619_1245\n",
+      "complete             Pa_Fri_21dpf_GroupC_n1_20200619_1440\n",
+      "complete             Pa_Fri_21dpf_GroupC_n2_20200619_1440\n",
+      "complete             Pa_Fri_21dpf_GroupC_n2b_20200619_1440\n",
+      "complete             Pa_Fri_21dpf_GroupC_n5_20200619_1440\n",
+      "complete             Pa_Fri_21dpf_GroupD_n1_20200619_1530\n",
+      "complete             Pa_Fri_21dpf_GroupD_n2_20200619_1200\n",
+      "tracking (4.0%)      Pa_Fri_21dpf_GroupD_n2b_20200619_1200\n",
+      "complete             Pa_Fri_21dpf_GroupD_n5_20200619_1200\n",
+      "complete             Pa_Fri_28dpf_GroupA_n2_20200626_1800\n",
+      "complete             Pa_Fri_28dpf_GroupB_n2_20200626_1730\n",
+      "complete             Pa_Fri_28dpf_GroupC_n2_20200626_1840\n",
+      "complete             Pa_Fri_28dpf_GroupD_n2_20200626_1700\n",
+      "complete             Pa_Fri_28dpf_groupA_n5_20200626_1800\n",
+      "complete             Pa_Fri_28dpf_groupB_n5_20200626_1730\n",
+      "tracking (89.0%)     Pa_Fri_28dpf_groupC_n5_20200626_1840\n",
+      "complete             Pa_Fri_42dpf_GroupB_n2_20200710_1725\n",
+      "complete             Pa_Fri_42dpf_GroupB_n5_20200710_1725\n",
+      "complete             Pa_Fri_43dpf_GroupAD_n1_20200711_1510\n",
+      "complete             Pa_Fri_43dpf_GroupAD_n2a_20200711_1430\n",
+      "complete             Pa_Fri_43dpf_GroupAD_n2b_20200711_1510\n",
+      "complete             Pa_Fri_43dpf_GroupAD_n5_20200711_1430\n",
+      "complete             Pa_Fri_43dpf_GroupC_n2a_20200711_1550\n",
+      "complete             Pa_Fri_43dpf_GroupC_n2b_20200711_1630\n",
+      "tracking (4.0%)      Pa_Fri_43dpf_GroupC_n5_20200711_1550\n"
      ]
     }
    ],
@@ -109,13 +152,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'no log': 0, 'tracking': 0, 'complete': 162, 'failed': 0}"
+       "{'no log': 638, 'tracking': 5, 'complete': 39, 'failed': 0}"
       ]
      },
      "metadata": {},
